fixing image alignment option styling

--- a/js/src/Renderer/Image/styles.css
+++ b/js/src/Renderer/Image/styles.css
@@ -15,6 +15,7 @@
 .rdw-image-alignment-option {
   height: 15px;
   width: 15px;
+  min-width: 15px;
 }
 .rdw-image-alignment {
   position: relative;
